--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,29 @@
 <resources>
-    <string name="app_name">墨•言</string>
-    <string name="xposed_desc">墨•言</string>
+    <string name="App_name">墨•言</string>
+    <string name="Xposed_desc">墨•言</string>
     <string name="Tips">提示</string>
     <string name="NotSupport">本模块未激活，请在 LSPosed 内激活本模块\n本模块仅支持最新版 LSPosed</string>
     <string name="ReStart">重启 App</string>
+    <string name="Menu">菜单</string>
+    <string name="HideDeskIcon">隐藏桌面图标</string>
+    <string name="ResetModule">重置模块</string>
+    <string name="ResetModuleDialog">是否要重置模块</string>
+    <string name="ResetModuleDialogTips">模块没问题请不要随意重置</string>
+    <string name="Ok">确定</string>
+    <string name="Cancel">取消</string>
+    <string name="DebugMode">Debug 模式</string>
+    <string name="ResetSuccess">重置成功</string>
+    <string name="NewVer">发现新版本</string>
+    <string name="Update">更新</string>
+    <string name="GetNewVerError">获取最新版下载地址失败:</string>
+    <string name="NoVerUpdate">无新版可更新</string>
+    <string name="CheckUpdateError">检查失败，请稍后再试</string>
+    <string name="CheckUpdateFailed">检查更新失败</string>
+    <string name="ReStartSystemUI">重启 SystemUI</string>
+    <string name="RestartSystemUI">请重启 SystemUI</string>
+    <string name="RestartUI">确定重启系统界面吗？</string>
+    <string name="RestartUITips">若使用中突然发现不能使用，可尝试重启系统界面。</string>
+    <string name="QuickTitle">墨•言：立即更新</string>
+    <string name="update">立即更新</string>
+    <string name="IsToast">Toast通知</string>
 </resources>
