--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="QuickTitle">墨•言：立即更新</string>
     <string name="update">立即更新</string>
     <string name="Switch">总开关</string>
-    <string name="UpdateInterval">更新间隔</string>
+    <string name="UpdateInterval">* 更新间隔</string>
     <string name="UpdateIntervalTips">单位：分钟，输入范围0–1440</string>
     <string name="InputError">输入范围不正确！</string>
 </resources>
