--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="Ok">确定</string>
     <string name="Cancel">取消</string>
     <string name="DebugMode">Debug 模式</string>
+    <string name="AutoHide">横屏隐藏</string>
     <string name="ResetSuccess">重置成功</string>
     <string name="NewVer">发现新版本</string>
     <string name="Update">更新</string>
